--- a/YYJ.ipynb
+++ b/YYJ.ipynb
@@ -17,28 +17,25 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "import shap\n",
-    "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "import seaborn as sns \n",
+    "from sklearn.model_selection import train_test_split \n",
+    "from sklearn.preprocessing import StandardScaler, RobustScaler \n",
+    "from sklearn.ensemble import RandomForestRegressor \n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.linear_model import LinearRegression \n",
+    "from sklearn.tree import DecisionTreeRegressor \n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.ensemble import AdaBoostRegressor \n",
+    "from sklearn.svm import SVR\n",
+    "from xgboost import XGBRFRegressor\n",
+    "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import accuracy_score, mean_squared_error, mean_squared_log_error\n",
     "from sklearn.metrics import recall_score\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.ensemble import BaggingRegressor\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.ensemble import AdaBoostRegressor\n",
-    "from xgboost import XGBRFRegressor\n",
-    "from sklearn.ensemble import VotingRegressor\n",
     "from bayes_opt import BayesianOptimization\n",
+    "from sklearn.datasets import make_classification\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -58,10 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"./Model13csv_merge_xguiyihua_ymutiply1000log_final.csv\")\n",
+    "data = pd.read_csv(\"./data.csv\")\n",
     "feature_cols = ['FishWW', 'FishLW', 'FishEDI', 'MeatWW', 'MeatLW', 'MeatDEI','EggWW', 'EggLW', 'EggEDI','MilkWW', 'MilkLW', 'MilkEDI','LegumeWW', 'LegumeEDI', 'CerealWW','CerealEDI', 'VegetWW', 'VegetEDI','PotatoWW', 'PotatoEDI', 'SumEDI','Incineration', 'IOS', 'EAF', 'Nonferrous','HW1000', 'HW1001', 'HW1013','HW1031', 'HW1014', 'HW1051','HW1099', 'CloA40', 'CloT64','PheDP3', 'PheDP4', 'PheDP5', 'PheDP6', 'Sovol','Chlorofen', 'KC300', 'KC400','KC500', 'KC600', 'KC1016','KC1232', 'KC1248', 'KC1254','KC1260', 'KC1262', 'LogKow','LogKoa', 'LogBCF', 'WaSolu', 'LogVaPres','NBO', 'Viscosity', 'MP']\n",
     "X = data[feature_cols]\n",
-    "y = data['HumanWW_log']\n",
+    "y = data['HumanWW']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=1)"
    ]
   },
@@ -84,7 +81,7 @@
     "vote = VotingRegressor(estimators=[('rf_reg', rf_reg), ('ada_dt_reg',  ada_dt_reg)])\n",
     "stack2_rf = RandomForestRegressor(n_estimators=500, oob_score=True)\n",
     "\n",
-    "model = [knn, lin, dt, rf, bag, gbdt, ada_dt, ada_lin, xg, vote, stack2_rf]"
+    "model = [knn, lin, dt_reg, rf, gbdt, ada_dt, ridge, xg, svr]"
    ]
   },
   {
@@ -94,11 +91,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_label = ['knn', 'lin', 'dt', 'rf', 'bag', 'gbdt', 'ada_dt', 'ada_lin', 'xg', 'vote', 'stack2_rf']\n",
+    "model_label = ['knn', 'lin', 'dt_reg', 'rf', 'gbdt', 'ada_dt', 'ridge', 'xg', 'svr']\n",
     " \n",
     " \n",
     "assess_label = ['score', 'EVS', 'MSE', 'MAE','median', 'R2']\n",
     "comparion = pd.DataFrame(index=model_label, columns=assess_label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d3fc21-33ce-48e5-ab30-38543f8bb936",
+   "metadata": {},
+   "source": [
+    "# RF"
    ]
   },
   {
@@ -163,6 +168,14 @@
     "y_pre_train = rf.predict(X_train)\n",
     "\n",
     "print('assess_label')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18850c18-5394-4e98-9cbb-abae84c2d63f",
+   "metadata": {},
+   "source": [
+    "# SHAP"
    ]
   },
   {
@@ -242,13 +255,7 @@
     "r2 = r2_score(y_test, y_pre)\n",
     "y_pre_train = xg.predict(X_train)\n",
     "\n",
-    "print('assess_label')\n",
-    "\n",
-    "plt.rcParams['image.cmap'] = 'viridis'\n",
-    "plt.rcParams['image.interpolation'] = 'none'\n",
-    "explainer = shap.Explainer(xg, X)\n",
-    "shap_values = explainer(X_test)\n",
-    "shap.summary_plot(shap_values, X_test)"
+    "print('assess_label')"
    ]
   },
   {
@@ -331,13 +338,7 @@
     "r2 = r2_score(y_test, y_pre)\n",
     "y_pre_train = knn.predict(X_train)\n",
     "\n",
-    "print('assess_label')\n",
-    "\n",
-    "plt.rcParams['image.cmap'] = 'viridis'\n",
-    "plt.rcParams['image.interpolation'] = 'none'\n",
-    "explainer = shap.Explainer(knn, X)\n",
-    "shap_values = explainer(X_test)\n",
-    "shap.summary_plot(shap_values, X_test)"
+    "print('assess_label')"
    ]
   },
   {
@@ -457,13 +458,7 @@
     "r2 = r2_score(y_test, y_pre)\n",
     "y_pre_train = gbdt.predict(X_train)\n",
     "\n",
-    "print('assess_label')\n",
-    "\n",
-    "plt.rcParams['image.cmap'] = 'viridis'\n",
-    "plt.rcParams['image.interpolation'] = 'none'\n",
-    "explainer = shap.Explainer(gbdt, X)\n",
-    "shap_values = explainer(X_test)\n",
-    "shap.summary_plot(shap_values, X_test)"
+    "print('assess_label')"
    ]
   },
   {
@@ -471,7 +466,7 @@
    "id": "8c3aae60-d134-4c42-bffd-4af4a813bc6c",
    "metadata": {},
    "source": [
-    "# AdaBoostRegressor"
+    "# AdaBoost"
    ]
   },
   {
@@ -516,42 +511,6 @@
     "median = median_absolute_error(y_test, y_pre)\n",
     "r2 = r2_score(y_test, y_pre)\n",
     "y_pre_train = ada_bo.predict(X_train)\n",
-    "\n",
-    "print('assess_label')\n",
-    "\n",
-    "plt.rcParams['image.cmap'] = 'viridis'\n",
-    "plt.rcParams['image.interpolation'] = 'none'\n",
-    "explainer = shap.Explainer(ada_bo, X)\n",
-    "shap_values = explainer(X_test)\n",
-    "shap.summary_plot(shap_values, X_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "57cafc6b-10a4-4cec-9264-b0b2ac949149",
-   "metadata": {},
-   "source": [
-    "# Bagging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dba0ad76-b95b-41a2-979c-bdbb45982dde",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bag = BaggingRegressor()\n",
-    "bag.fit(X_train, y_train)\n",
-    "print(bag.score(X_test, y_test))\n",
-    "y_pre = bag.predict(X_test)\n",
-    "score = bag.score(X_test, y_test)\n",
-    "EVS = explained_variance_score(y_test, y_pre)\n",
-    "MSE = mean_squared_error(y_test, y_pre)\n",
-    "MAE = mean_absolute_error(y_test, y_pre)\n",
-    "median = median_absolute_error(y_test, y_pre)\n",
-    "r2 = r2_score(y_test, y_pre)\n",
-    "y_pre_train = bag.predict(X_train)\n",
     "\n",
     "print('assess_label')"
    ]
@@ -605,7 +564,63 @@
     "MAE = mean_absolute_error(y_test, y_pre)\n",
     "median = median_absolute_error(y_test, y_pre)\n",
     "r2 = r2_score(y_test, y_pre)\n",
-    "y_pre_train = ridge.predict(X_train)"
+    "y_pre_train = ridge.predict(X_train)\n",
+    "\n",
+    "print('assess_label')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "492f80d5-ee7e-4d04-ae5e-3ccdb090175a",
+   "metadata": {},
+   "source": [
+    "# SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5d43ccd-ec3f-4a26-8074-d83035b315d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def svr_evaluate(gamma, C):\n",
+    "    val = cross_val_score(\n",
+    "        SVR(gamma=1,\n",
+    "            C=1),\n",
+    "        X_train, y_train, scoring='r2', cv=10\n",
+    "        ).mean()\n",
+    "    return val\n",
+    "\n",
+    "pbounds = {'gamma': (0.001, 10), \n",
+    "           'C': (0.0001, 10)}\n",
+    "\n",
+    "svr_bo = BayesianOptimization(f=svr_evaluate, \n",
+    "                              pbounds=pbounds,\n",
+    "                              verbose=2, \n",
+    "                              random_state=1)\n",
+    "\n",
+    "svr_bo.maximize(init_points=5,\n",
+    "                n_iter=20, \n",
+    "                acq='ei')\n",
+    "\n",
+    "print(svr_bo.max)\n",
+    "res = svr_bo.max\n",
+    "params_max = res['params']\n",
+    "\n",
+    "svr=SVR()\n",
+    "svr.fit(X_train, y_train)\n",
+    "print(svr.score(X_test, y_test))\n",
+    "y_pre = svr.predict(X_test)\n",
+    "score = svr.score(X_test, y_test)\n",
+    "EVS = explained_variance_score(y_test, y_pre)\n",
+    "MSE = mean_squared_error(y_test, y_pre)\n",
+    "MAE = mean_absolute_error(y_test, y_pre)\n",
+    "median = median_absolute_error(y_test, y_pre)\n",
+    "r2 = r2_score(y_test, y_pre)\n",
+    "y_pre_train = svr.predict(X_train)\n",
+    "\n",
+    "print('assess_label')"
    ]
   }
  ],
